--- a/workflowdemo/Apps/LoginApp/templates/register.html
+++ b/workflowdemo/Apps/LoginApp/templates/register.html
@@ -1,45 +1,34 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin MyWebSite</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap core CSS -->
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <title>原生态实验室-工单系统</title>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<link href="/static/new/css/bootstrap.min.css" rel="stylesheet">
+<link href="/static/new/font-awesome/css/font-awesome.css" rel="stylesheet">
+<link href="/static/new/css/plugins/iCheck/custom.css" rel="stylesheet">
+<link href="/static/new/css/animate.css" rel="stylesheet">
+<link href="/static/new/css/style.css" rel="stylesheet">
+<link href="/static/new/css/ztree/zTreeStyle.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="/static/bootstrap/css/signin.css" rel="stylesheet">
+<style>
+    .gray-bg{background: #FFFFFF;}
+    .navbar-static-top{background:#ffffff;}
+    .voilet-margins{border:solid 1px #e7eaec;}
+    #side-menu {z-index: 9999;}
+    .default {z-index: 9999;}
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+</style>
 
-    <link rel="stylesheet" href="/static/my/dist/css/sweetalert.css">
-
-    <script type="text/javascript" charset="utf8" src="/static/my/dist/js/sweetalert.min.js"></script>
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <title>注册</title>
-</head>
 
 <style type="text/css">
 .bg{
-	background:url(../../static/img/background_register.jpg);
+	background:url(../../static/img/background.jpg);
         background-repeat: no-repeat center center;
 	background-size:cover;
 }
@@ -57,37 +46,72 @@
 </style>
 
 
-<body class="bg">
-<!--表单域，action用于将获取的到信息提交到后台地址-->
-<div class="container">
-<form target="form" class="form-signin" action="save" method="post">
-    <span>
-        用户:<input class="form-control" type="text" placeholder="输入用户名" id="username" name="username" required >
-    </span>
-    <br>
-    <span>
-        密码:<input class="form-control" type="password" placeholder="输入密码" id="password" name="password" required >
-    </span>
-    <br>
-    <span>
-        邮箱:<input class="form-control" type="text" placeholder="输入邮箱" id="mail" name="mail" required >
-    </span>
-    <span>
-        昵称:<input class="form-control" type="text" placeholder="输入姓名" id="nickname" name="nickname" required >
-    </span>
-    <br>
- 
+<link href="/static/new/css/plugins/summernote/summernote.css" rel="stylesheet">
+<link href="/static/new/css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
 
 
-    <span>
-        <button type="submit" class="btn btn-success" name="submit1">注册</button>
-    </span>
+<link rel="stylesheet" href="/static/my/dist/css/sweetalert.css">
 
-</form>
-<iframe name="form" id="form" style="display:none"></iframe>
-</div> <!-- /container -->
+<script type="text/javascript" charset="utf8" src="/static/my/dist/js/sweetalert.min.js"></script>
 
 
+
+</head>
+
+
+
+
+<body class="gray-bg bg">
+
+    <div class="middle-box text-center loginscreen  animated fadeInDown" style="color:black;">
+        <div>
+            <div>
+                <br>
+                <br>
+                <div class="col-md-12 column">
+                    <img  src="/static/img/user-160x160.jpg" width="140" height="140" class="img-circle" />
+                </div>
+
+            </div>
+            <h3 style="color:gold">欢迎使用原生态实验室-注册页面</h3>
+            <!--<p>Login in. To see it in action.</p>-->
+
+
+            <form target="form" class="form-signin" action="save" method="post">
+
+                <div class="form-group form-inline">
+                        用户:<input  class="form-control" type="text" placeholder="输入用户名" id="username" name="username" required >
+                </div>
+
+                <div class="form-group form-inline">
+                        密码:<input class="form-control" type="password" placeholder="输入密码" id="password" name="password" required >
+                </div>
+
+
+                <div class="form-group form-inline">
+                        邮箱:<input class="form-control" type="text" placeholder="输入邮箱" id="mail" name="mail" required >
+                </div>
+
+
+                <div class="form-group form-inline">
+                        昵称:<input class="form-control" type="text" placeholder="输入姓名" id="nickname" name="nickname" required >
+                </div>
+
+
+                <button type="submit" class="btn btn-success block full-width m-b" name="submit1">注册</button>
+
+
+                <!--<a href="/accounts/resetpass/"><small>Forgot password?</small></a>-->
+                <!--<p class="text-muted text-center"><small>Do not have an account?</small></p>-->
+            </form>
+
+            <iframe name="form" id="form" style="display:none"></iframe>
+            <br>
+            <br>
+            <br>
+            <p class="m-t" style="color:gold"> <small>原生态实验室 &copy; 2021</small> </p>
+        </div>
+    </div>
 
 <script src="/static/bootstrap/js/jquery.js"></script>
 <script src="/static/bootstrap/js/jquery-ui.js"></script>
@@ -95,7 +119,8 @@
 
 <script>
 $("#form").load(function(){
-   var restr = $(this).contents().find("body").text(); 
+   var restr = $(this).contents().find("body").text();
+   
    if (restr == "login success")
    {
 	setTimeout(function(){
@@ -132,5 +157,7 @@ $("#form").load(function(){
 
 </script>
 
+
 </body>
+
 </html>
