modfiy login page background

--- a/workflowdemo/templates/admin/login.html
+++ b/workflowdemo/templates/admin/login.html
@@ -17,7 +17,7 @@
 <link href="/static/new/css/ztree/zTreeStyle.css" rel="stylesheet">
 
 <style>
-    .gray-bg{background: #FFFFFF;}
+    .gray-bg{background: #012345;}
     .navbar-static-top{background:#ffffff;}
     .voilet-margins{border:solid 1px #e7eaec;}
     #side-menu {z-index: 9999;}
