modify DataTable input args & show item of page base login user

--- a/workflowdemo/adminlte/templates/adminlte/base.html
+++ b/workflowdemo/adminlte/templates/adminlte/base.html
@@ -107,6 +107,14 @@ $(function(){
 
 
     });
+
+$(function(){
+        var username = '{{request.user}}';
+        if(username != 'admin')
+	{
+		$('ul.treeview-menu li[class=displayalltickets]').hide();
+	}
+});
 </script>
 
 
