--- a/workflowdemo/adminlte/templates/adminlte/nav-left.html
+++ b/workflowdemo/adminlte/templates/adminlte/nav-left.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 {%load i18n%}
+
+
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
@@ -40,7 +42,8 @@
                     <li><a href="{% url 'ticket-my' %}"><i class="fa fa-circle-o"></i>我创建的</a></li>
                     <li><a href="{% url 'ticket-my-todo' %}"><i class="fa fa-circle-o"></i>我的待办</a></li>
                     <li><a href="{% url 'ticket-my-related' %}"><i class="fa fa-circle-o"></i>我相关的</a></li>
-                    <li><a href="{% url 'ticket-all' %}"><i class="fa fa-circle-o"></i>所有工单</a></li>
+
+                    <li class="displayalltickets"><a href="{% url 'ticket-all' %}"><i class="fa fa-circle-o"></i>所有工单</a></li> 
                 </ul>
             </li>
 
