add bookmeeting item

--- a/workflowdemo/adminlte/templates/adminlte/nav-left.html
+++ b/workflowdemo/adminlte/templates/adminlte/nav-left.html
@@ -59,7 +59,26 @@
                     <li><a href="{% url 'ticket-download' %}"><i class="fa fa-circle-o"></i>北京共享目录</a></li>
                     <li><a href="{% url 'ticket-download' %}"><i class="fa fa-circle-o"></i>西安共享目录</a></li>
                 </ul>
+
+
             </li>
+
+
+
+            <li class="treeview active ">
+                <a href="#">
+                    <i class="fa fa-files-o"></i> <span>预定系统</span>
+                    <span class="pull-right-container">
+        	      <i class="fa fa-angle-left pull-right"></i>
+	            </span>
+                </a>
+
+                <ul class="treeview-menu">
+                    <li><a href="../../book/bookpage"><i class="fa fa-circle-o"></i>会议室预定</a></li>
+                </ul>
+
+            </li>
+
 
 
 
